# potoo

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml
bevy_codegen/: Cargo.toml
bevy_codegen/src/: bevy_model_template.rs  generate.rs  lib.rs  model.rs  parse.rs  templates.rs
client/: Cargo.toml
client/src/: code_editor.rs  lib.rs  syntax_highlighting.rs
components/: Cargo.toml
components/src/: lib.rs
examples/: http.rs  parse_bevy.rs
server/: Cargo.toml
server/src/: lib.rs
src/: history.rs  main.rs  templates.rs
systems/: Cargo.toml
systems/src/: lib.rs
