[workspace]
resolver = "2"
members = ["systems", "components"]

[package]
name = "potoo"
version = "0.0.1"
edition = "2021"
description = "The Cursed Editor for Bevy"
license = "MIT OR Apache-2.0"

[dependencies]
bevy = { version = "0.8.0" }
components = { path = "components" }
hot-lib-reloader = { version = "0.5.3", optional = true }
rand = "0.8.5"
systems = { path = "systems" }

[features]
default = []
reload = [
  "dep:hot-lib-reloader",
  # Make sure that the types don't change:
  "components/dynamic",
  # This is important on windows for avoiding file locking issues:
  "bevy/dynamic",
]
