[workspace]
resolver = "2"
members = ["bevy_codegen"]

[package]
name = "potoo"
version = "0.1.0"
edition = "2021"
description = "The Cursed Editor for Bevy"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.9.1"
bevy_editor_pls = "0.2.0"
codegen = "0.2"
bevy_codegen = { path = "bevy_codegen" }
undo = "0.48"
rust-format = "0.3.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"