[package]
name = "bevy_codegen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codegen = "0.2"
syn = { version = "1.0", features = ["full", "extra-traits"] }
bevy = { version = "0.9", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust-format = "0.3.4"