[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["syntect"]

[dependencies]
bevy = { version = "0.10", default-features = false }
bevy_editor_pls = { version = "0.3" }
mini-redis = "0.4.1"
syntect = { version = "5", optional = true, default-features = false, features = [
    "default-fancy",
] }
tokio = { version = "1.25", features = ["rt"]}
bytes = "1.4.0"
futures-lite = "1.12"
bevy_codegen = {path = "../bevy_codegen"}